--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "API for processing refunds",
   "dependencies": {
+    "-": "^0.0.1",
+    "@prisma/client": "^6.2.1",
     "cors": "^2.8.6",
+    "D": "^1.0.0",
     "express": "^4.19.2",
+    "prisma": "^6.2.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
