--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@prisma/client": "^6.2.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "D": "^1.0.0",
     "express": "^4.19.2",
@@ -19,6 +20,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "ts-node": "^10.9.2",
