--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "D": "^1.0.0",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.3",
     "prisma": "^6.2.1",
     "zod": "^4.3.6"
   },
@@ -23,6 +26,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.7.3"
